# GradMan

./: .flake8  .gitignore  .test.py.swp  .test.py.un~  LICENSE  Makefile  README.md  demo.py  pyproject.toml  test.py  test.py~
.github/workflows/: lint.yml  tensor-test.yml
MudGrad/: MudGrad.py  __init__.py
activation/: Sigmoid.py  __init__.py
gradman/: __init__.py  ctg.py  module.py  nn.py  ops.py  optim.py  tensor.py
layers/: .Conv2D.py.swp  .Conv2D.py.un~  .Dense.py.un~  .MaxPooling2D.py.un~  Conv2D.py  Conv2D.py~  Dense.py  Dense.py~  Flatten.py  MaxPooling2D.py  MaxPooling2D.py~  __init__.py
loss/: __init__.py  binary_crossentropy.py
model/: .Linear.py.swp  .Linear.py.un~  Linear.py  Linear.py~  __init__.py
optimizer/: .gradient_descent.py.un~  __init__.py  gradient_descent.py  gradient_descent.py~
resources/: README.md  convex_optimization.md  simple_regression_with_nn_linear.md
tests/: test_tensor_op.py
