[tool.poetry]
name = "gradman"
version = "0.0.1b7"
description = "Baby Deep Learning Library"
authors = ["tanmoyio <tanmoyf2@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.21.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
skip = [".gitignore", "__init__.py"]

[scripts]
15test = "pytest"
